fix：修改了GetMessage接口的路由，以及增加了范围获取
