# backend/docs/swagger.yaml
@@ -47,6 +47,13 @@ definitions:
     required:
     - message
     type: object
+  request.MessageWithRange:
+    properties:
+      end:
+        type: integer
+      start:
+        type: integer
+    type: object
   request.MessageWithTime:
     properties:
       createdtime:
@@ -62,6 +69,15 @@ definitions:
       blogcount:
         type: integer
       tagcount:
+        type: integer
+    type: object
+  response.BlogList:
+    properties:
+      blogs:
+        items:
+          $ref: '#/definitions/response.BlogWithTag'
+        type: array
+      count:
         type: integer
     type: object
   response.BlogWithTag:
@@ -88,6 +104,15 @@ definitions:
         type: string
       message:
         type: string
+    type: object
+  response.MessagesWithCount:
+    properties:
+      count:
+        type: integer
+      msgs:
+        items:
+          $ref: '#/definitions/response.MessageWithTime'
+        type: array
     type: object
   response.Response:
     properties:
@@ -354,9 +379,7 @@ paths:
             - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  items:
-                    $ref: '#/definitions/response.BlogWithTag'
-                  type: array
+                  $ref: '#/definitions/response.BlogList'
               type: object
       summary: 该接口用于获取所有博文简略，每个博文的内容前100字
       tags:
@@ -389,27 +412,6 @@ paths:
       tags:
       - Auth
   /message:
-    get:
-      consumes:
-      - application/json
-      description: 该接口用于获取所有的留言
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 请求成功
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/response.MessageWithTime'
-                  type: array
-              type: object
-      summary: 用于获取留言的接口
-      tags:
-      - Message
     post:
       consumes:
       - application/json
@@ -434,6 +436,33 @@ paths:
                   type: object
               type: object
       summary: 用于上传留言的接口
+      tags:
+      - Message
+  /messagerange:
+    post:
+      consumes:
+      - application/json
+      description: 该接口用于获取所有的留言
+      parameters:
+      - description: 留言范围
+        in: body
+        name: messagewithrange
+        required: true
+        schema:
+          $ref: '#/definitions/request.MessageWithRange'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 请求成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.MessagesWithCount'
+              type: object
+      summary: 用于获取留言的接口
       tags:
       - Message
   /tag:
