# backend/internal/model/response/message.go
@@ -6,3 +6,7 @@ type MessageWithTime struct {
 	Message   string    `json:"message"`
 	CreatedAt time.Time `json:"createdtime"`
 }
+type MessagesWithCount struct {
+	Msgs  []MessageWithTime
+	Count int
+}
